trxservice/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol:"GRPC"
  name: grpc-prodinfo-ingress 
spec:
  rules:
  - host: trxsvc  #从集群外部可以访问的域名或ip:端口
    http:
      paths:
      - backend:
          serviceName: trxsvc
          servicePort: grpc
